fix(align): visually align icon

--- a/app/javascript/components/SearchHeader/SearchHeader.scss
+++ b/app/javascript/components/SearchHeader/SearchHeader.scss
@@ -207,7 +207,7 @@ $headerHeight: 60px;
 
     .SearchIcon {
       left: 18px;
-      top: 50%;
+      top: 54%;
       transform: translate(0, -50%);
     }
 
